--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
       <!--section about-->
       <section class="about section">
         <div class="container">
-          <h2 class="about-title">About Us</h2>
+          <h2 class="about-title visually-hidden">About Us</h2>
           <ul class="about-list">
-            <li>
+            <li class="about-list-link">
               <h3 class="about-list-title">Strategy</h3>
               <p class="about-list-text">
                 Our goal is to identify the business problem to walk away with
@@ -113,13 +113,17 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-list-title">Mark Guerrero</h3>
-              <p class="team-list-text">Product Designer</p>
+              <div class="name-position">
+                <h3 class="team-list-title">Mark Guerrero</h3>
+                <p class="team-list-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img src="./images/tom.jpg" alt="Tom" width="264" height="260" />
-              <h3 class="team-list-title">Tom Ford</h3>
-              <p class="team-list-text">Frontend Developer</p>
+              <div class="name-position">
+                <h3 class="team-list-title">Tom Ford</h3>
+                <p class="team-list-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -128,8 +132,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-list-title">Camila Garcia</h3>
-              <p class="team-list-text">Marketing</p>
+              <div class="name-position">
+                <h3 class="team-list-title">Camila Garcia</h3>
+                <p class="team-list-text">Marketing</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -138,8 +144,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-list-title">Daniel Wilson</h3>
-              <p class="team-list-text">UI Designer</p>
+              <div class="name-position">
+                <h3 class="team-list-title">Daniel Wilson</h3>
+                <p class="team-list-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
