--- a/index.html
+++ b/index.html
@@ -76,21 +76,21 @@
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="about-list-link">
               <h3 class="about-list-title">Punctuality</h3>
               <p class="about-list-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="about-list-link">
               <h3 class="about-list-title">Diligence</h3>
               <p class="about-list-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="about-list-link">
               <h3 class="about-list-title">Technologies</h3>
               <p class="about-list-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -154,7 +154,7 @@
       </section>
 
       <!--section portfolio-->
-      <section class="portfolio">
+      <section class="portfolio section">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
