--- a/index.html
+++ b/index.html
@@ -165,8 +165,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-list-title">Banking App</h3>
-              <p class="portfolio-list-text">App</p>
+              <div class="card-text">
+                <h3 class="portfolio-list-title">Banking App</h3>
+                <p class="portfolio-list-text">App</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -175,8 +177,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-list-title">Cashless Payment</h3>
-              <p class="portfolio-list-text">Marketing</p>
+              <div class="card-text">
+                <h3 class="portfolio-list-title">Cashless Payment</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -185,8 +189,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-list-title">Meditation App</h3>
-              <p class="portfolio-list-text">App</p>
+              <div class="card-text">
+                <h3 class="portfolio-list-title">Meditation App</h3>
+                <p class="portfolio-list-text">App</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -195,8 +201,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-list-title">Taxi Service</h3>
-              <p class="portfolio-list-text">Marketing</p>
+              <div class="card-text">
+                <h3 class="portfolio-list-title">Taxi Service</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -205,8 +213,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-list-title">Screen Illustrations</h3>
-              <p class="portfolio-list-text">Design</p>
+              <div class="card-text">
+                <h3 class="portfolio-list-title">Screen Illustrations</h3>
+                <p class="portfolio-list-text">Design</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -215,8 +225,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-list-title">Online Courses</h3>
-              <p class="portfolio-list-text">Marketing</p>
+              <div class="card-text">
+                <h3 class="portfolio-list-title">Online Courses</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -225,7 +237,7 @@
 
     <footer class="bottom">
       <div class="container">
-        <a href="./index.html" class="navigation-logo"
+        <a href="./index.html" class="navigation-logo bottom-logo"
           >Web<span class="studio-bottom">Studio</span></a
         >
         <p class="bottom-text">
