--- a/index.html
+++ b/index.html
@@ -69,28 +69,28 @@
         <div class="container">
           <h2 class="about-title visually-hidden">About Us</h2>
           <ul class="about-list">
-            <li class="about-list-link">
+            <li class="about-list-item">
               <h3 class="about-list-title">Strategy</h3>
               <p class="about-list-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="about-list-link">
+            <li class="about-list-item">
               <h3 class="about-list-title">Punctuality</h3>
               <p class="about-list-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li class="about-list-link">
+            <li class="about-list-item">
               <h3 class="about-list-title">Diligence</h3>
               <p class="about-list-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="about-list-link">
+            <li class="about-list-item">
               <h3 class="about-list-title">Technologies</h3>
               <p class="about-list-text">
                 Design practice focused on digital experiences. We bring forth a
