--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header class="page-header">
       <div class="container">
         <nav class="navigation">
-          <a href="./index.html" class="navigation-logo"
+          <a href="./index.html" class="navigation-logo top-logo"
             >Web<span class="studio">Studio</span></a
           >
 
